examples/test/testpolicy6668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6668
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key14: value45
      key30: value40
      key18: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value29
          key42: value31
      podSelector:
        matchLabels:
          key23: value45
